--- a/public/index.html
+++ b/public/index.html
@@ -1288,8 +1288,8 @@ app.setViewEngine('novax', {
   
   {{#each items}}
     &lt;div class="item"&gt;
-      &lt;h3&gt;{{ this.name }}&lt;/h3&gt;
-      &lt;p&gt;Price: ${{ this.price }}&lt;/p&gt;
+      &lt;h3&gt;{{ name }}&lt;/h3&gt;
+      &lt;p&gt;Price: ${{ price }}&lt;/p&gt;
     &lt;/div&gt;
   {{/each}}
 &lt;/body&gt;
