--- a/public/index.html
+++ b/public/index.html
@@ -1499,9 +1499,12 @@ app.at(3000, () => {
         <a href="https://www.npmjs.com/package/novaxjs2" title="NPM">
           <i class="fab fa-npm"></i>
         </a>
+        <a href="https://www.whoappsomali.site/profile/novaxjs2" title="Whoapp Somali">
+          <i class="fa-solid fa-w"></i>
+        </a>
       </div>
       <p>&copy; 2025 Novaxjs2. All rights reserved.</p>
-      <p>Version 4.6.4</p>
+      <p>Version 4.6.5</p>
     </div>
   </div>
 
