--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.8.0/highlight.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/ace/1.15.2/ace.js"></script>
   <title>Novaxjs2 - Modern Node.js Framework</title>
+  <meta name="google-site-verification" content="3jArtrE4MbplKyQMWnGaZgUu0YPAJchdDxiA5bS5vqs" />
   <meta name="title" content="Novaxjs2 - Modern Node.js Framework">
   <meta name="description" content="Lightweight, high-performance Node.js framework for building web applications and APIs with minimal overhead and maximum flexibility using modern JavaScript features.">
   <meta name="keywords" content="Node.js, Framework, JavaScript, Web Development, API, Novaxjs2, novaxjs2, nova, nova framework, api, novajs, node.js, web framework, lightweight, flexible, extensible, http server, routing, middleware, static files, dynamic web applications, node framework, node web framework, nodejs, nodejs framework, nodejs web framework, nodejs api, nodejs server, nodejs routing, nodejs middleware, nodejs static files">
