--- a/public/footer.html
+++ b/public/footer.html
@@ -6,7 +6,7 @@
         <a href="https://x.com/CabdiWaaxi100" title="Twitter">
     <i class="fab fa-twitter"></i>
         </a>
-        <a href="https://github.com/WhoappRoom" title="GitHub">
+        <a href="https://github.com/cabdiwaaxid-so" title="GitHub">
     <i class="fab fa-github"></i>
         </a>
         <a href="https://www.npmjs.com/package/novaxjs2" title="NPM">
@@ -17,7 +17,7 @@
         </a>
   </div>
   <p>&copy; 2025 Novaxjs2. All rights reserved.</p>
-  <p>Version 8.0.0</p>
+  <p>Version 8.3.0</p>
   <p>Created by <code>Cabdi Waaxid Siciid</code></p>
-  <p>Last updated: August, 3, 2025</p>
+  <p>Last updated: August, 21, 2025</p>
 </div>
