--- a/public/index.html
+++ b/public/index.html
@@ -22,17 +22,17 @@
 
   <!-- Open Graph / Facebook (for social sharing) -->
   <meta property="og:type" content="website">
-  <meta property="og:url" content="https://novaxjs.vercel.app/">
+  <meta property="og:url" content="https://novaxjs2.site/">
   <meta property="og:title" content="Novaxjs2 - Modern Node.js Framework">
   <meta property="og:description" content="Lightweight, high-performance Node.js framework for building web applications and APIs">
-  <meta property="og:image" content="https://novaxjs.vercel.app/logo.png">
+  <meta property="og:image" content="https://novaxjs2.site/logo.png">
 
   <!-- Twitter -->
   <meta property="twitter:card" content="summary_large_image">
-  <meta property="twitter:url" content="https://novaxjs.vercel.app/">
+  <meta property="twitter:url" content="https://novaxjs2.site/">
   <meta property="twitter:title" content="Novaxjs2 - Modern Node.js Framework">
   <meta property="twitter:description" content="Lightweight, high-performance Node.js framework for building web applications and APIs">
-  <meta property="twitter:image" content="https://novaxjs.vercel.app/logo.png">
+  <meta property="twitter:image" content="https://novaxjs2.site/logo.png">
 
   <!-- Favicons -->
   <link rel="icon" href="/logo.png" sizes="any">
@@ -43,7 +43,7 @@
   <meta name="msapplication-TileColor" content="#0f172a">
 
   <!-- Canonical URL -->
-  <link rel="canonical" href="https://novaxjs.vercel.app/">
+  <link rel="canonical" href="https://novaxjs2.site/">
 
   <!-- Additional Recommended Tags -->
   <meta name="robots" content="index, follow">
