--- a/public/index.html
+++ b/public/index.html
@@ -490,7 +490,7 @@ app.at(3000, '0.0.0.0', () => {
       </div>
       </section>
       
-      @include('footer.html')
+      @include('./docs/footer.html')
     </div>
   </div>
 
